[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/Illustration.png" type="Texture" id=2]
[ext_resource path="res://assets/grimoire.png" type="Texture" id=3]
[ext_resource path="res://assets/Illustration2.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=3]
radius = 32.0

[sub_resource type="CircleShape2D" id=2]
radius = 48.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Grimoire" type="Sprite" parent="."]
position = Vector2( 32, -8 )
texture = ExtResource( 3 )

[node name="ShieldArea" type="Area2D" parent="."]

[node name="ShieldSprite" type="Sprite" parent="ShieldArea"]
visible = false
modulate = Color( 1, 1, 1, 0.270588 )
position = Vector2( -9.53674e-07, -9.53674e-07 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="ShieldCollider" type="CollisionShape2D" parent="ShieldArea"]
shape = SubResource( 2 )
disabled = true

[node name="WaterBallTimer" type="Timer" parent="."]

[node name="ShieldTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
